[gd_scene load_steps=11 format=2]

[ext_resource path="res://Buttons/Assets/PNG/green_button05.png" type="Texture" id=1]
[ext_resource path="res://Buttons/Assets/PNG/green_button04.png" type="Texture" id=2]
[ext_resource path="res://Popup/GameOverPopup.gd" type="Script" id=3]
[ext_resource path="res://Buttons/NavigationButton.gd" type="Script" id=4]
[ext_resource path="res://Fonts/open-sans/OpenSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/BOLD/HomepageBaukasten-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/BOLD/HomepageBaukasten-Bold.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 19
font_data = ExtResource( 5 )

[node name="GameOverPopup" type="PopupDialog"]
margin_left = 359.0
margin_top = 95.0
margin_right = 1864.0
margin_bottom = 957.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverText" type="Label" parent="."]
margin_left = 2.00452
margin_top = 86.6742
margin_right = 1503.0
margin_bottom = 175.674
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="."]
margin_left = 535.362
margin_top = 256.652
margin_right = 790.362
margin_bottom = 335.652
custom_fonts/font = SubResource( 2 )
text = "SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="Label" parent="."]
margin_left = 905.362
margin_top = 256.652
margin_right = 956.362
margin_bottom = 335.652
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="PenaltyText" type="Label" parent="."]
margin_left = 535.362
margin_top = 366.652
margin_right = 835.362
margin_bottom = 445.652
custom_fonts/font = SubResource( 2 )
text = "WRONG"
align = 1
valign = 1

[node name="PenaltyNumber" type="Label" parent="."]
margin_left = 905.362
margin_top = 366.652
margin_right = 956.362
margin_bottom = 445.652
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="OvertimeText" type="Label" parent="."]
visible = false
margin_left = 510.0
margin_top = 490.0
margin_right = 565.0
margin_bottom = 505.0
custom_fonts/font = SubResource( 2 )
text = "PENALTY"
align = 1
valign = 1

[node name="OvertimeNumber" type="Label" parent="."]
visible = false
margin_left = 880.0
margin_top = 490.0
margin_right = 920.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="TotalText" type="Label" parent="."]
margin_left = 535.362
margin_top = 586.652
margin_right = 783.362
margin_bottom = 665.652
custom_fonts/font = SubResource( 2 )
text = "TOTAL"
align = 1
valign = 1

[node name="TotalNumber" type="Label" parent="."]
margin_left = 905.362
margin_top = 586.652
margin_right = 956.362
margin_bottom = 665.652
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1

[node name="PopupBackButton" type="TextureButton" parent="."]
margin_left = 520.0
margin_top = 700.0
margin_right = 710.0
margin_bottom = 749.0
rect_scale = Vector2( 2.5, 2.5 )
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
script = ExtResource( 4 )
path_to_new_scene = "res://Menus/MainMenu.tscn"

[node name="BackButtonText" type="Label" parent="PopupBackButton"]
margin_left = 1.0
margin_top = 2.0
margin_right = 126.0
margin_bottom = 30.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 3 )
text = "KEMBALI"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
